# Thesis_ML

./: .gitignore  AGENTS.md  CLAUDE.md  EVAL.md  NOTICE  README.md  RUN.md  SCHEMA.md  SPEC.md  TODO.md  pyproject.toml
config/: AGENTS.md  default.yaml
configs/: AGENTS.md  README.md  local_full.yaml  local_overfit.yaml  local_overfit_v2.yaml  local_overfit_v2_finetune.yaml
data/: .gitignore  README.md
diagnostics/: 006-pretraining-rework-investigation.md  AGENTS.md
experiments/: AGENTS.md  README.md
notebooks/: AGENTS.md  README.md
plans/: AGENTS.md
prompts/: AGENTS.md
prompts/completed/: 001-scaffold-project-structure.md  002-tokenization-serialization.md  003-dataset-corruption.md  004-model-architecture.md  005-add-bypass-sampler.md  006-pretraining-no-input-t-oversampling.md
research/: AGENTS.md
scripts/: AGENTS.md  README.md  __init__.py  estimate_context_window.py  gpu_smoke_test.py
scripts/output/: context_window_estimate.json
src/thesis_ml/: AGENTS.md  __init__.py  config.py  serialize.py
src/thesis_ml/data/: AGENTS.md  __init__.py  collate.py  dataset.py  frame_cache.py  resumable_sampler.py  split.py  windowing.py
src/thesis_ml/eval/: AGENTS.md  __init__.py  buildorder.py  finetune_report.py  harness.py  metrics.py
src/thesis_ml/inference/: AGENTS.md  __init__.py  decode.py  sampler.py  timing.py
src/thesis_ml/model/: AGENTS.md  __init__.py  backbone.py  embedding.py  loss.py  model.py
src/thesis_ml/pipeline/: AGENTS.md  __init__.py  acquire_data.py  finetune_pipeline.py  finished_export.py  storage.py  train_pipeline.py
src/thesis_ml/train/: AGENTS.md  __init__.py  corruption.py  loop.py  train.py
src/thesis_ml/viz/: AGENTS.md  __init__.py  diagnostics.py
src/thesis_ml/vocab/: AGENTS.md  __init__.py  content_vocab.py  special_tokens.py
tests/: .gitignore  AGENTS.md  UV_RUNS.txt  __init__.py  overfit-fine-tune.BAT  overfit.bat  smallFinetuneTest.bat  smallTrainingTest.bat  smallTrainingTestV2.bat  test_config.py  test_context_window_estimator.py  test_dataset.py  test_debut_target.py  test_eval.py  test_finetune_pipeline.py  test_finetune_report.py  test_model.py  test_pipeline.py  test_pipeline_hardening.py  test_sampler.py  test_sampler_outcome_last.py  test_serialization.py  test_smoke.py  test_training.py  test_viz.py  test_windowing.py  test_windows_launchers.py
tests/fixtures/: match_4745722_game_state.parquet  match_4745724_game_state.parquet  match_4745725_game_state.parquet
