# pyproject.toml - package metadata and build configuration for Thesis_ML.
# Managed with uv; the importable package uses a src/ layout at src/thesis_ml.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-ml"
version = "0.0.1"
description = "SC2 strategy prediction with masked discrete diffusion"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Mataeo John Anderson" }]
dependencies = [
    "boto3>=1.34",
    "kaggle>=1.6",
    "pandas>=2.1",
    "psutil>=5.9",
    "pyarrow>=12.0",
    "PyYAML>=6.0",
    "torch>=2.2",
]

[project.scripts]
thesis-ml-acquire = "thesis_ml.pipeline.acquire_data:main"
thesis-ml-train = "thesis_ml.pipeline.train_pipeline:main"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
